--- a/source/themes/geografia_theme/layouts/index.html
+++ b/source/themes/geografia_theme/layouts/index.html
@@ -140,7 +140,7 @@
           </div>
         </div>
 
-        {{ partial "members_list" .Site.Data.asso }}
+        {{ partial "members_list" .Site.Data.associates }}
 
       </div>
 
