--- a/source/themes/geografia_theme/layouts/projects/single.html
+++ b/source/themes/geografia_theme/layouts/projects/single.html
@@ -11,7 +11,7 @@
     <div class='full parallax' style='background-image: url(/images/Geografia/portfolio-header-bg.jpg); color: #fff;'>
       <div class='row'>
         <div class='large-12 columns'>
-          {{ partial "section_header.html" (dict "title" "Our projects" "tagline" "Have a look at our works" "color" "#fff" "class" "big") }}
+          {{ partial "section_header.html" (dict "title" "Our projects" "tagline" "Have a look at just a few of the projects we have completed" "color" "#fff" "class" "big") }}
         </div>
       </div>
       <div class='four spacing'></div>
