--- a/source/themes/geografia_theme/layouts/services/single.html
+++ b/source/themes/geografia_theme/layouts/services/single.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class='medium-4 columns'>
-          <h2>geodata analytics</h2>
+          <h2>spatial analysis</h2>
           <div class='spacing'></div>
           {{ range $index, $element := .Params.services_geodata_analytics }}
           <div class='fadein mod modIconText' data-delay='{{  mul 300 (sub $index 1) }}'>
