--- a/source/themes/geografia_theme/layouts/partials/our_customers.html
+++ b/source/themes/geografia_theme/layouts/partials/our_customers.html
@@ -1,7 +1,7 @@
 <div class='full parallax' style='background-image: url({{ "/images/Geografia/customers-bg.jpg" | absURL}}); color: #fff;'>
   <div class='row'>
     <div class='large-12 columns'>
-      {{ partial "section_header.html" (dict "title" "Our customers" "color" "#333333") }}
+      {{ partial "section_header.html" (dict "title" "Our clients" "color" "#333333") }}
       <div class='spacing'></div>
       <p>
         We work for all tiers of government, the private sector and not-for-profit entities: any organisations or people who need to understand complex economic, demographic and spatial data.
