--- a/css/style.css
+++ b/css/style.css
@@ -3014,11 +3014,11 @@ form input.error, form textarea.error {
 }
 .modGallery ul.gallery li a p {
   color: #fff;
-  font-size: 1.5rem;
+  font-size: 1.1rem;
 }
 
 @media only screen and (max-width: 40em) {
-  .modGallery ul.gallery li a p {
+  .modGallery ul.gallery li a p,h3 {
     font-size: 0.875rem;
   }
 }
