Revert "fix main slider start time"
This reverts commit 336f06536b1341be1416a6fba245db0860acfa0e.

--- a/source/themes/geografia_theme/layouts/partials/main_slider.html
+++ b/source/themes/geografia_theme/layouts/partials/main_slider.html
@@ -13,7 +13,7 @@
     </ul>
     <ul class='sequence-canvas'>
       {{ range $index, $element := .Site.Data.slides }}
-      <li class='slide{{ $index }} frame {{ if gt $index 1 }}{{else}}static{{end}} {{ $element.klass }}'>
+      <li class='frame {{ if gt $index 1 }}{{else}}static{{end}} {{ $element.klass }}'>
         <div class='bg' style='background-image: url({{ $element.bg}});'></div>
         <div class='small-title {{ $element.small_title.klass }}'>
           <div class='row'>
