--- a/source/themes/geografia_theme/layouts/index.html
+++ b/source/themes/geografia_theme/layouts/index.html
@@ -72,7 +72,7 @@
         </div>
         <div class='row'>
           <div class='medium-6 columns'>
-            <img class="fadeinleft" alt="" src="images/Geografia/responsive.jpg" />
+            <img class="fadeinleft" alt="" src="images/Geografia/responsive.png" />
             <div class='three spacing'></div>
           </div>
           <div class='medium-6 columns'>
