--- a/source/themes/geografia_theme/layouts/partials/footer.html
+++ b/source/themes/geografia_theme/layouts/partials/footer.html
@@ -130,3 +130,11 @@
 <script src="{{ "/js/jquery.sequence-min.js" | relURL }}" type="text/javascript"></script>
 <script src="{{ "/js/jquery.easing.1.3.js" | relURL }}" type="text/javascript"></script>
 <script src="{{ "/js/app.js" | relURL }}" type="text/javascript"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-86661193-1', 'auto');
+  ga('send', 'pageview');
+</script>
