--- a/source/themes/geografia_theme/layouts/about/single.html
+++ b/source/themes/geografia_theme/layouts/about/single.html
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-      {{ partial "members_list" .Site.Data.team }}
+      {{ partial "members_list" .Site.Data.team.list }}
 
       <div class='row'>
         <div class='large-12 columns'>
