--- a/source/themes/geografia_theme/layouts/index.html
+++ b/source/themes/geografia_theme/layouts/index.html
@@ -130,8 +130,7 @@
           </div>
         </div>
 
-        {{ partial "members_list" .Site.Data.team.list
-       }}
+        {{ partial "members_list" .Site.Data.team.list }}
 
         <div class='row'>
           <div class='large-12 columns'>
