--- a/source/themes/geografia_theme/layouts/services/single.html
+++ b/source/themes/geografia_theme/layouts/services/single.html
@@ -8,7 +8,7 @@
 
     {{ partial "header.html" . }}
 
-    <div class='full parallax' style='background-image: url(/images/Geografia/generic-header-pg.jpg); color: #fff;'>
+    <div class='full parallax' style='background-image: url(//res.cloudinary.com/sabman/image/upload/f_auto,q_auto/v1488580240/generic-header-pg_eshv9s.jpg); color: #fff;'>
       <div class='row'>
         <div class='large-12 columns'>
           {{ partial "section_header.html" (dict "title" "Our services" "tagline" "Across the disciplines of demography, economics and spatial analysis we provide a range of quantitative and qualitative analytical services." "color" "#fff" "class" "big") }}
