--- a/source/themes/geografia_theme/layouts/index.html
+++ b/source/themes/geografia_theme/layouts/index.html
@@ -65,7 +65,7 @@
             {{ partial "section_header.html" (dict "title" "Our services") }}
             <div class='spacing'></div>
             <p>
-              Our services range across economic and population modelling and impact analysis; developing online spatial, data visualisation and decision support tools; spatial analysis; and urban and regional planning.
+              Our services range across economic and population modelling and impact analysis; developing online spatial, data visualisation and decision support tools; spatial analytics; and urban and regional planning.
             </p>
             <div class='three spacing'></div>
           </div>
