--- a/source/themes/geografia_theme/layouts/partials/lab_item.html
+++ b/source/themes/geografia_theme/layouts/partials/lab_item.html
@@ -1,4 +1,5 @@
-<li class="{{ delimit .Params.categories " " }}">
+<li class="">
+<!-- <li class="delimit .Params.categories " ""> -->
 
   <a href='{{ .Params.link }}'>
     <div class="item-title" style="font-weight:bold;font-size:14px;z-index: 1;position: absolute;padding-left:50%;padding-left:50%;width: 100%;color: white;background-color: #222;opacity: 0.9;">{{.Title}}</div>
